shrink app store banners to avoid distortion

--- a/web/stylesheet/_sidenav_responsive.scss
+++ b/web/stylesheet/_sidenav_responsive.scss
@@ -47,7 +47,7 @@ $breakpointTablet: 768px;
     max-width: 50%;
     img {
       max-width: 99%;
-      height: 40px;
+      height: 36px;
     }
   }
 }
